syntax = "proto3";

package GrpcUserEndpoint;

// Định nghĩa các services
service UserService {
  // Lấy user theo Id
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
}

// Message request cho service GetUser
message GetUserRequest {
  string id = 1;
}

// Message response cho service GetUser
message GetUserResponse {
  string id = 1;
  string name = 2;
}
